[package]
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
name = "robuild"
version = "0.0.31"
edition = "2021"
readme = "README.md"
categories = ["development-tools::build-utils"]
description = "Tool for writing build recipes in Rust"
keywords = ["build-recipe", "nobuild", "nob", "rob", "build-tool"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rakivo/robuild"
rust-version = "1.56.0"

[features]
gcc = []
clang = []
gxx = []
clangxx = []
mingw32 = []

[lib]
name = "robuild"
path = "robuild.rs"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
